refactor: modify the codes to english language

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+ {% include "partials/_head.html" %}
 </head>
-<body>
-    <h1>H1</h1>
-</body>
+    <body>
+        <header>{% include "partials/_header.html" %}</header>
+        <main></main>
+        <footer>{% include "partials/_footer.html" %}</footer>
+    </body>
 </html>
