--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
  {% include "partials/_head.html" %}
 </head>
     <body>
         <header>{% include "partials/_header.html" %}</header>
         <main></main>
-        <br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
         <footer>{% include "partials/_footer.html" %}</footer>
     </body>
 </html>
